src/objects/Module__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalGrade__c</fullName>
        <label>Approval Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AttemptsAllowedPerQuestion__c</fullName>
        <label>Attempts Allowed per Question</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttemptsAllowed__c</fullName>
        <label>Attempts Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Course to which the module belongs.</description>
        <inlineHelpText>Course to which the module belongs.</inlineHelpText>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Modules</relationshipLabel>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PenaltyMode__c</fullName>
        <label>Penalty Mode</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative Weight</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionPool__c</fullName>
        <label>Question Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShuffleQuestions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shuffle Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalValue__c</fullName>
        <label>Total Value</label>
        <summarizedField>Question__c.CorrectWeight__c</summarizedField>
        <summaryForeignKey>Question__c.Module__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WeightedQuestions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weighted Questions</label>
        <type>Checkbox</type>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ApprovalGradeRange</fullName>
        <active>true</active>
        <description>Approval grade must be a value between 0 and 100.</description>
        <errorConditionFormula>OR(ApprovalGrade__c &lt; 0, ApprovalGrade__c &gt; 1)</errorConditionFormula>
        <errorDisplayField>ApprovalGrade__c</errorDisplayField>
        <errorMessage>The approval grade must be a value between 0 and 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AttemptsAllowedPerQuestionRange</fullName>
        <active>true</active>
        <description>The field Attempts Allowed per Question must be a number that can be null or greater than 0.</description>
        <errorConditionFormula>AND( NOT( ISBLANK(  AttemptsAllowedPerQuestion__c  ) ) ,  AttemptsAllowedPerQuestion__c   &lt;= 0)</errorConditionFormula>
        <errorDisplayField>AttemptsAllowedPerQuestion__c</errorDisplayField>
        <errorMessage>When filled, the number of attempts allowed per question must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AttemptsAllowedRange</fullName>
        <active>true</active>
        <description>The field Attempts Allowed must be a number that can be null or greater than 0.</description>
        <errorConditionFormula>AND( NOT( ISBLANK( AttemptsAllowed__c ) ) , AttemptsAllowed__c  &lt;= 0)</errorConditionFormula>
        <errorDisplayField>AttemptsAllowed__c</errorDisplayField>
        <errorMessage>When filled, the number of attempts allowed must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotChangeCourse</fullName>
        <active>true</active>
        <description>The course cannot be changed.</description>
        <errorConditionFormula>ISCHANGED( Course__c )</errorConditionFormula>
        <errorDisplayField>Course__c</errorDisplayField>
        <errorMessage>The course cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseMandatory</fullName>
        <active>true</active>
        <description>The course field is mandatory.</description>
        <errorConditionFormula>ISBLANK( Course__c )</errorConditionFormula>
        <errorDisplayField>Course__c</errorDisplayField>
        <errorMessage>The course is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GradeApprovalIfActive</fullName>
        <active>true</active>
        <description>When the module is set to active must validate that the Grade Approval is not null.</description>
        <errorConditionFormula>AND( IsActive__c , ISBLANK( ApprovalGrade__c ))</errorConditionFormula>
        <errorDisplayField>ApprovalGrade__c</errorDisplayField>
        <errorMessage>Active modules must have an approval grade.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoActiveCourseOnCreation</fullName>
        <active>true</active>
        <description>A Module cannot be created with a relation to an active Course, and the Course cannot be modified afterwards.</description>
        <errorConditionFormula>AND( 
      ISNEW() , 
      ISPICKVAL(Course__r.Status__c , 
         &apos;Active&apos;) 
   )</errorConditionFormula>
        <errorDisplayField>Course__c</errorDisplayField>
        <errorMessage>On module creation, course cannot be active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoQuestionPoolIfWeightedQuestions</fullName>
        <active>true</active>
        <description>The Module cannot have a value for Question Pool and use Weighted Questions.</description>
        <errorConditionFormula>AND( NOT(ISBLANK(QuestionPool__c)) , WeightedQuestions__c)</errorConditionFormula>
        <errorMessage>The Module cannot use a Question Pool together with Weighted Questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NotActiveIfNew</fullName>
        <active>true</active>
        <description>The module cannot be created with status active, as it won&apos;t have questions yet.</description>
        <errorConditionFormula>AND( ISNEW() , IsActive__c )</errorConditionFormula>
        <errorDisplayField>IsActive__c</errorDisplayField>
        <errorMessage>New module (without questions) cannot be active.</errorMessage>
    </validationRules>
</CustomObject>